# pdf-rancher

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  LICENSE-3rdparty.csv  build.rs  license-tool.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  licenses.rs  project.rs
src/assets/css/: solid.css
src/lib/: Banners.svelte  Counter.svelte  Exporting.svelte  FocusedPage.svelte  Importing.svelte  OpeningFiles.svelte  Preview.svelte  Progress.svelte  UpdateDialog.svelte  ViewLicenses.svelte  project.ts  ui_state.ts
xtask/: Cargo.toml
xtask/src/: main.rs  release.rs  update_pdfium.rs
