[package]
name = "pdf-rancher"
version = "0.1.8"
description = "PDF Rancher"
authors = ["Guillaume Malette"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.1.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
anyhow = "1.0.93"
pdfium-render = "0.8.26"
image = "0.25.5"
thiserror = "2.0.3"
base64 = "0.22.1"
lopdf = "0.34.0"
rand = "0.7.3"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
csv = "1.3.1"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.25"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
