[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
cargo_metadata = "0.18"
clap = { version = "4", features = ["derive"] }
colored = "2"
git2 = "0.18"
glob = "0.3"
regex = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "0.6"
tar = "0.4.40"
flate2 = "1.0.28"
